<resources>
    <string name="app_name">Indicon Join</string>
    <string name="title">Targets to search</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Submit</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_label">Login</string>
    <string name="login_button">Login</string>

    <string name="success_login_msg">Login Successful</string>
    <string name="error_login_msg">Please fill any empty fields</string>

    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password again</string>
    <string name="create_or_edit_login">Create/Edit Login</string>
    <string name="create_or_edit_login_btn">Create/Edit Login</string>
    <string name="succ_login_created_msg">Login created</string>
    <string-array name="libraries">
        <item>AltBeacon</item>
        <item>Trilateration</item>
        <item>Circle Menu</item>
        <item>Boom Menu</item>
    </string-array>
    <string-array name="team">
        <item>Karim EL GHARBI as <b>Project Manager</b></item>
        <item>Brandon SIMON-VERMOT</item>
        <item>Julien GIDEL</item>
        <item>Quentin ARCICAULT</item>*
        <item>Damien LE LANN</item>
        <item>Axel EYRAUD</item>
    </string-array>
    <string name="NB_BEACONS">3</string>
    <string name="NB_ARDUINO">4</string>
</resources>
