<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/CreateOrEditLoginLabel"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/create_or_edit_login"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:id="@+id/editTextNewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="New Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:id="@+id/editTextNewPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <EditText
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:id="@+id/editTextNewPwdAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/new_password_again"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnCreateLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/green"
        android:text="@string/create_or_edit_login_btn"
        android:textColor="@color/white"/>

</LinearLayout>